--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             srcset="">
         <p class="lead">Eu sou Giovanna_</p>
         <h1>Eu sou estudante</h1>
-        <p>Estudo no Colégio Estaual Feliberto Nunes Gonçalves - EFM. Veja os projetos
+        <p>Estudo no Colégio Estadual Felisberto Nunes Gonçalves - EFM. Veja os projetos
             que já desenvolvi!</p>
         <p>Minhas habilidades</p>
         <div>
