--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
-            srcset="">
+        <img src="img/avatar-perfil.png" alt="avatar da Giovanna" class="rounded-circle" width="236" height="336"
+            srcset="id:49047083436982706">
         <p class="lead">Eu sou Giovanna_</p>
         <h1>Eu sou estudante</h1>
         <p>Estudo no Colégio Estadual Felisberto Nunes Gonçalves - EFM. Veja os projetos
