--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
                 <div class="modal-body">
                     <p>O projeto é uma página web criada com HTML e CSS, destinada a explicar como a agricultura é importante na nossa sociedade. 
                         O objetivo é criar um ambiente virtual onde seja possível explicar a relação entre cidade e campo.</p>
-                    <p>A relação entre cidade e campo é de interdependência, onde cada um fornece elementos cruciais.</p>
+                    <p>A relação entre cidade e campo é de interdependência, onde cada um fornece elementos cruciais para o desenvolvimento do outro
+                        O campo fornece alimentos e matérias-primas para a cidade, que, por sua vez, oferece tecnologia, mercado consumidor e serviços para o campo.</p>
                     <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão
                         principal (.container) que apresenta o propósito do site. Cada explicação é destacada em seu próprio contâiner, mostrando uma
                         imagem, detalhes sobre e um link de vídeos profissionais. O design responsivo é garantido pelo
