--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">A relação entre cidade e campo: Uma Webpage Personalizada</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -94,12 +94,12 @@
                         O objetivo é criar um ambiente virtual onde seja possível explicar a relação entre cidade e campo.</p>
                     <p>A relação entre cidade e campo é de interdependência, onde cada um fornece elementos cruciais para o desenvolvimento do outro
                         O campo fornece alimentos e matérias-primas para a cidade, que, por sua vez, oferece tecnologia, mercado consumidor e serviços para o campo.</p>
-                    <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão
-                        principal (.container) que apresenta o propósito do site. Cada explicação é destacada em seu próprio contâiner, mostrando uma
-                        imagem, detalhes sobre e um link de vídeos profissionais. O design responsivo é garantido pelo
-                        uso de uma meta tag viewport e um layout flexível que se adapta a diferentes tamanhos de
-                        tela.</p>
-                    <p>.</p>
+                    <p>Campo: A produção agrícola e pecuária no campo é vital para o abastecimento de alimentos nas cidades, arantindo que as populações urbanas 
+                        tenham acesso a alimentos frescos e diversos. Além disso, o campo fornece matérias-primas para a indústria, como algodão,
+                        madeira e minerais.</p>
+                    <p>.Cidade: As cidades oferecem um mercado consumidor para os produtos rurais, impulsionando a economia rural e incentivando a produção de alimentos e 
+                        matérias-primas. A cidade também oferece serviços e infraestrutura que são importantes para o desenvolvimento rural,como educação, saúde,
+                    transporte e comunicação.</p>
                     <img src="img/projeto-1.png" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
