--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/" class="card-img-top" alt="Imagem do projeto agrinho">
                     <div class="card-body">
                         <h5 class="card-title">Cidade e campo: Uma Webpage Personalizada</h5>
                         <p class="card-text">Este projeto é uma página web que apresenta a relação entre a agricultura e o urbanismo,
