--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             srcset="">
         <p class="lead">Eu sou Giovanna_</p>
         <h1>Eu sou estudante</h1>
-        <p>Estudo no Colégio Estadual Felisberto Nunes Gonçalves - EFM. Veja os projetos
-            que já desenvolvi!</p>
+        <p>Estudo no Colégio Estadual Felisberto Nunes Gonçalves - EFM. Veja o projeto
+            que desenvolvi recentemente!</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
