--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <p>.Cidade: As cidades oferecem um mercado consumidor para os produtos rurais, impulsionando a economia rural e incentivando a produção de alimentos e 
                         matérias-primas. A cidade também oferece serviços e infraestrutura que são importantes para o desenvolvimento rural,como educação, saúde,
                     transporte e comunicação.</p>
-                    <img src="img/projeto-1.png" class="img-fluid w-100"
+                    <img src="img/Cidade-e-campo.jpeg" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
