--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <p>Campo: A produção agrícola e pecuária no campo é vital para o abastecimento de alimentos nas cidades, arantindo que as populações urbanas 
                         tenham acesso a alimentos frescos e diversos. Além disso, o campo fornece matérias-primas para a indústria, como algodão,
                         madeira e minerais.</p>
-                    <p>.Cidade: As cidades oferecem um mercado consumidor para os produtos rurais, impulsionando a economia rural e incentivando a produção de alimentos e 
+                    <p>Cidade: As cidades oferecem um mercado consumidor para os produtos rurais, impulsionando a economia rural e incentivando a produção de alimentos e 
                         matérias-primas. A cidade também oferece serviços e infraestrutura que são importantes para o desenvolvimento rural,como educação, saúde,
                     transporte e comunicação.</p>
                     <img src="img/Cidade-e-campo.jpeg" class="img-fluid w-100"
