--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="container text-center">
         <img src="img/avatar-perfil.png" alt="avatar da Giovanna" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou Giovanna_</p>
+        <p class="lead">Eu sou Giovanna</p>
         <h1>Eu sou estudante</h1>
         <p>Estudo no Colégio Estadual Felisberto Nunes Gonçalves - EFM. Veja o projeto
             que desenvolvi recentemente!</p>
@@ -100,8 +100,7 @@
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/minhas-leituras/">Ver projeto ao vivo</a>
-                    <a href="https://github.com/femascheti/minhas-leituras">Ver código do projeto</a>
+                    <a href="https://https://meuartigo.brasilescola.uol.com.br/geografia/as-relacoes-entre-cidade-campo.htm#:~:text=O%20urbano%20e%20a%20cidade,possuem%2C%20(...)">Ver código do projeto</a>
                 </div>
             </div>
         </div>
