--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                 <div class="card">
                     <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
+                        <h5 class="card-title">
                         </h5>
-                        <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa sobre
-                            astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
-                            forma da Terra através de cenários dinâmicos e diálogos informativos.
+                        <p class="card-text">O campo oferece diversos benefícios para a cidade, principalmente no que diz respeito ao abastecimento de alimentos,
+                            matérias-primas e geração de energia. Além disso, o campo contribui para a saúde física e mental,oferecendo um ambiente mais tranquilo
+                            e com contato direto com a natureza. 
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o projeto</button>
