--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Benefícios do Campo para a Cidade</h5>
-                        <p class="card-text">Alimentos Frescos e Materias-Primas:.</p>
+                        <p class="card-text">Alimentos Frescos e Materias-primas:</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
                             o projeto</button>
                     </div>
@@ -65,9 +65,9 @@
                     <div class="card-body">
                         <h5 class="card-title">
                         </h5>
-                        <p class="card-text">O campo oferece diversos benefícios para a cidade, principalmente no que diz respeito ao abastecimento de alimentos,
-                            matérias-primas e geração de energia. Além disso, o campo contribui para a saúde física e mental,oferecendo um ambiente mais tranquilo
-                            e com contato direto com a natureza. 
+                        <p class="card-text">
+                            
+                             
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o projeto</button>
@@ -110,28 +110,17 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">Benefícios do campo para a cidade: Uma Webpage Personalizada</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto consiste em uma aplicação web interativa, desenvolvida com HTML, CSS, e JavaScript, que
-                        simula uma experiência narrativa centrada no tema da Inteligência Artificial. O objetivo é
-                        engajar os jogadores em um cenário fictício que aborda o avanço da IA e suas possíveis
-                        consequências para a humanidade, destacando a importância da reflexão ética sobre a tecnologia.
-                    </p>
-                    <p>O HTML estrutura o conteúdo da página, dividindo-o em seções como a tela inicial, caixa de
-                        perguntas, alternativas de resposta, e o resultado final baseado nas escolhas do jogador. O CSS
-                        é utilizado para estilizar a página, empregando um esquema de cores futurista e layout
-                        responsivo para melhorar a experiência do usuário. JavaScript é usado para adicionar
-                        interatividade ao jogo, manipulando o DOM para atualizar o conteúdo da página conforme as
-                        escolhas do jogador, e determinando o fluxo da narrativa através de uma série de perguntas e
-                        respostas.</p>
-                    <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão
-                        principal (.container) que apresenta o propósito do site e a coleção de livros em uma seção
-                        flexível (.livros). Cada livro é destacado em seu próprio contêiner (.livro), mostrando uma
-                        imagem da capa, detalhes do livro e um link de compra. O design responsivo é garantido pelo
-                        uso de uma meta tag viewport e um layout flexível que se adapta a diferentes tamanhos de
-                        tela.</p>
+                    <p>O campo oferece diversos benefícios para a cidade, principalmente no que diz respeito ao abastecimento de alimentos,
+                    matérias-primas e geração de energia. Além disso, o campo contribui para a saúde física e mental,oferecendo um ambiente mais tranquilo
+                    e com contato direto com a natureza.</p>
+                    <p>Abastecimento de alimentos: O campo é responsável pela produção de alimentos essenciais como frutas, verduras, cereais, carnes e laticínios,
+                    que chegam à cidade através de mercados e supermercados.</p>
+                    <p>Matérias-primas: O campo fornece matérias-primas para diversas indústrias na cidade, como madeira, fibras para tecidos 
+                    e produtos agrícolas para a produção de alimentos processados.</p>
                     <p>Os scripts JavaScript incluem módulos para gerar nomes aleatórios, definir as perguntas e as
                         lógicas de jogo, como iniciar o jogo, apresentar perguntas e alternativas, processar as escolhas
                         dos jogadores, e exibir o resultado final. Este design modular facilita a manutenção e a
