--- a/index.html
+++ b/index.html
@@ -121,21 +121,20 @@
                     que chegam à cidade através de mercados e supermercados.</p>
                     <p>Matérias-primas: O campo fornece matérias-primas para diversas indústrias na cidade, como madeira, fibras para tecidos 
                     e produtos agrícolas para a produção de alimentos processados.</p>
-                    <p>Os scripts JavaScript incluem módulos para gerar nomes aleatórios, definir as perguntas e as
-                        lógicas de jogo, como iniciar o jogo, apresentar perguntas e alternativas, processar as escolhas
-                        dos jogadores, e exibir o resultado final. Este design modular facilita a manutenção e a
-                        expansão futura do jogo. A importância das ferramentas utilizadas (HTML, CSS, JavaScript) reside
-                        na criação de uma experiência interativa que não apenas entretém, mas também educa os jogadores
-                        sobre a complexidade ética e social da IA, incentivando a reflexão crítica sobre o papel da
-                        tecnologia em nossas vidas.
+                    <p>É importante ressaltar que a relação entre campo e cidade é de interdependência,
+                        ou seja, a cidade depende do campo para o abastecimento de alimentos e matérias-primas, enquanto o campo pode se beneficiar
+                        da infraestrutura e serviços oferecidos pela cidade. O campo contribui significativamente para as cidades, fornecendo alimentos,
+                        matérias-primas e recursos naturais, além de promover uma vida mais saudável e equilibrada. A produção agrícola no campo é fundamental para abastecer
+                        os mercados e supermercados urbanos, garantindo a oferta de alimentos frescos e nutritivos. Além disso, o campo fornece matérias-primas para a indústria,
+                        que são transformadas em diversos produtos.
+                        A vida no campo também oferece benefícios como ar mais puro, contato com a natureza, menor estresse e pressão, e a possibilidade de cultivar
+                        seus próprios alimentos. 
                     </p>
                     <img src="img/projeto-2.png" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao
-                        vivo</a>
-                    <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver código do
+                    <a href="https://www.atrnp.com.br/blog/os-beneficios-da-vida-no-campo/">Ver código do
                         projeto</a>
                 </div>
             </div>
@@ -151,19 +150,10 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto é uma aplicação educativa interativa focada em ensinar conceitos básicos de
-                        astronomia. Utiliza uma série de scripts associados a diferentes atores (sprites) e
-                        cenários para criar uma experiência de aprendizado envolvente. O objetivo é familiarizar
-                        os usuários com tópicos como as fases da Lua, eclipses, a visibilidade de diferentes
-                        constelações dependendo da localização geográfica na Terra, e a forma da Terra, através
-                        de interações e visualizações dinâmicas.</p>
-                    <p>Cada ator no projeto possui scripts que definem seu comportamento em resposta a eventos
-                        específicos, como o início do programa (quando a bandeira é clicada), cliques do
-                        usuário, ou mensagens recebidas. Estes eventos desencadeiam ações como mudanças de
-                        cenário, movimentos de atores, exibição ou ocultação de atores, e a apresentação de
-                        diálogos informativos. Por exemplo, ao clicar em determinados atores, os usuários podem
-                        "receber" uma prova, o que leva a uma mudança de cenário e a exibição de informações
-                        relevantes ou a visualização de uma constelação específica.</p>
+                    <p>O campo oferece diversos benefícios para a cidade, principalmente no que diz respeito ao abastecimento de alimentos, 
+                        matérias-primas e geração de energia. Além disso, o campo contribui para a saúde física e mental,
+                        oferecendo um ambiente mais tranquilo e com contato direto com a natureza. </p>
+                    <p></p>
                     <p>A importância das ferramentas utilizadas, como os blocos de código visual do Scratch,
                         reside na sua acessibilidade e na capacidade de engajar aprendizes de diferentes idades
                         no pensamento computacional e na exploração de conceitos científicos de forma
