--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">: Uma Webpage Personalizada</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -154,16 +154,15 @@
                         matérias-primas e geração de energia. Além disso, o campo contribui para a saúde física e mental,
                         oferecendo um ambiente mais tranquilo e com contato direto com a natureza. </p>
                     <p></p>
-                    <p>A importância das ferramentas utilizadas, como os blocos de código visual do Scratch,
-                        reside na sua acessibilidade e na capacidade de engajar aprendizes de diferentes idades
-                        no pensamento computacional e na exploração de conceitos científicos de forma
-                        interativa. O uso de cenários, movimentos, e diálogos dinâmicos ajuda a criar uma
-                        experiência de aprendizado mais rica e memorável, encorajando os usuários a explorar e
-                        interagir com o conteúdo de maneira ativa, em vez de passivamente.</p>
+                    <p>Você já parou para pensar de onde vem a comida que você come todos os dias? Imagine se as cidades não tivessem acesso
+                        aos alimentos frescos produzidos no campo, ou se os agricultores não tivessem para quem vender suas colheitas!A interdependência
+                        entre campo e cidade é uma relação de dependência mútua, onde ambos os ambientes precisam um do outro para prosperar.
+                        O campo fornece alimentos e matérias-primas para a cidade, enquanto a cidade oferece mercado consumidor, bens e serviços para o campo.
+                        Essa relação é fundamental para o funcionamento da sociedade e para o desenvolvimento econômico e social de ambos.</p>
                     <img src="img/projeto-3.png" alt="Projeto 3" class="img-fluid w-100">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://scratch.mit.edu/projects/951732825/">Ver projeto ao vivo</a>
+                    <a href="https://https://www.teachy.com.br/resumos/ensino-fundamental/4ano/geografia/explorando-a-interdependencia-campo-e-cidade-em-harmonia-Socioemocional">Ver projeto ao vivo</a>
                 </div>
             </div>
         </div>
